changed styling of imprint section and mobile navigation

--- a/src/imprint.html
+++ b/src/imprint.html
@@ -12,15 +12,15 @@
     {{> doc_head}}
 </head>
 
-<body class="bg-black h-screen">
-    <div class="container mx-auto text-left py-12 text-gray-300 max-w-4xl">
+<body class="bg-primary-200 h-screen">
+    <div class="container mx-auto text-left py-12 max-w-4xl">
         <div class="flex justify-between items-center">
-            <h1 class="my-4 text-3xl font-bold text-gray-100">
+            <h1 class="my-4 text-3xl font-bold text-primary-900">
                 Imprint
             </h1>
-            <a class="btn btn-primary" href="/">Back</a>
+            <a class="btn btn-primary rounded" href="/">Back</a>
         </div>
-        <label class="text-gray-500">Responsible for content of this site:</label>
+        <label class="text-gray-700">Responsible for content of this site:</label>
         <p class="my-3">
             Inspired Consulting GmbH<br />
             Konrad-Adenauer-Ufer 7 · 50668 Köln <br />
@@ -28,12 +28,12 @@
             Registergericht: Amtsgericht Köln<br />
             VAT: DE327219324
         </p>
-        <p class="text-sm">
-            <label class="text-gray-500">Represented by the managing directors:</label><br />
+        <p>
+            <label class="text-gray-700">Represented by the managing directors:</label><br />
             Christian Albrecht, Oliver Tigges<br />
         </p>
-        <p class="text-sm mt-3">
-            <label class="text-gray-500">Contact:</label><br />
+        <p class="mt-3">
+            <label class="text-gray-700">Contact:</label><br />
             Phone: +49 221 27321334<br />
             E-Mail:get@inspired.consulting
         </p>
@@ -46,19 +46,19 @@
             <a href="https://inspired.consulting"><span class="text-inspired-gray  font-semibold">Inspired
                     Consulting</span></a>.
         </p>
-        <section class="my-6 text-sm text-gray-500">
-            <label class="text-gray-500">Image references:</label><br />
+        <section class="my-6 text-sm text-primary-900">
+            <label class="text-gray-700">Image references:</label><br />
             <ul>
                 <li><a href="https://www.flaticon.com/de/kostenlose-animierte-icons/roboter"
-                        title="Animated roboter icon" class="hover:text-primary-100">Animated roboter icon by
+                        title="Animated roboter icon" class="hover:text-primary-700 hover:underline underline-offset-4">Animated roboter icon by
                         Freepik -
                         Flaticon</a></li>
                 <li><a href="https://www.flaticon.com/de/kostenloses-animiertes-icon/zusammenarbeit_9822027?term=menschen&page=1&position=8&origin=tag&related_id=9822027"
-                        title="Animated people icon" class="hover:text-primary-100">Animated people icon by Freepik
+                        title="Animated people icon" class="hover:text-primary-700 hover:underline underline-offset-4">Animated people icon by Freepik
                         -
                         Flaticon</a></li>
                 <li><a href="https://www.flaticon.com/de/kostenlose-animierte-icons/sicherheit"
-                        title="Animated shield icons" class="hover:text-primary-100">Animated shield icon by Freepik
+                        title="Animated shield icons" class="hover:text-primary-700 hover:underline underline-offset-4">Animated shield icon by Freepik
                         -
                         Flaticon</a></li>
             </ul>
