--- a/src/index.html
+++ b/src/index.html
@@ -41,13 +41,13 @@
 
     <!-- Menu Button -->
     <button class="text-gray-100 ml-auto" onclick="toggleMobileMenu()">
-        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+        <svg class="w-7 h-7" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
         </svg>
     </button>
 
     <!-- Navigation links for mobile -->
-    <div id="mobileMenuItems" class="hidden absolute top-full right-0 bg-primary-800 p-2 space-y-4">
+    <div id="mobileMenuItems" class="hidden absolute top-full right-0 bg-primary-400 p-6 -mt-0.5 space-y-4" style="background-image: linear-gradient(45deg, rgba(126,73,244,1.00) 2%, rgba(149,74,244,1.00) 50%); background-position: center center; background-size: cover;">
         <a href="#preview-web-app" class="block text-gray-100">App Preview</a>
         <a href="#list-of-benefits" class="block text-gray-100">Your Benefits</a>
         <a href="#how-does-it-work" class="block text-gray-100">How It Works</a>
@@ -101,8 +101,8 @@
         <div class="w-full lg:w-1/2 h-60vmin bg-cover">
             <img src="./img/shiba-hero.png" alt="Hero image" class="w-full h-full object-cover">
         </div>
-        <div class="w-full px-4 my-auto py-8 lg:ml-12 lg:mr-6 lg:w-1/2">
-            <h1 class="text-4xl w-full font-bold pt-2 lg:pt-0 md:text-5xl lg:text-6xl xl:text-7xl">
+        <div class="w-full px-4 my-auto lg:px-8 lg:mx-auto lg:w-1/2">
+            <h1 class="text-4xl w-full font-bold pt-4 lg:pt-0 md:text-5xl lg:text-6xl xl:text-7xl">
                 Protect your business from security threats
             </h1>
             <p class="text-2xl font-light mt-6 mb-12 md:text-1xl lg:text-3xl">
@@ -110,7 +110,7 @@
             <a href="mailto:threatshield@inspired.consulting"
                 class="block sm:w-full lg:inline bg-primary-800 text-white text-center tracking-wider py-4 px-6 rounded hover:bg-primary-700 transition-all">
                 Send us an e-mail</a>
-            <div class="mt-12">
+            <div class="mt-12 pb-4">
                 <span class="hover:text-primary-900">
                     <img src="./logos/github-mark-white.png" alt="GitHub Logo" class="w-6 h-6 mx-1 inline-block">
                     <a href="https://github.com/inspired-consulting/threat_shield" target="_blank"
