styled imprint.html, terms.html and privacy.html

--- a/src/terms.html
+++ b/src/terms.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="./css/main.css" />
 </head>
 
-<body class="bg-black h-screen">
+<body class="flex flex-col bg-gray-200 min-h-screen">
     <style>
         h2 {
             margin-top: 1.5rem;
@@ -24,49 +24,45 @@
         }
     </style>
 
-    <div class="container mx-auto text-left py-12 text-gray-200 max-w-4xl">
+    <div class="container mx-auto text-left py-12 px-4 max-w-4xl flex-grow">
         <div class="flex justify-between items-center">
-            <h1 class="my-4 text-3xl font-bold text-gray-100">
+            <h1 class="my-4 text-3xl font-bold">
                 Terms of Service for ThreatShield
             </h1>
-            <a class="btn btn-primary" href="/">Back</a>
+            <a class="btn btn-primary rounded" href="/">Back</a>
         </div>
 
-        <p>Last Updated: January 9th, 2024</p>
+        <p class="text-gray-700">Last Updated: January 9th, 2024</p>
 
         <h2>Introduction</h2>
-
         <p>
             Welcome to ThreatShield, a service provided by Inspired Consulting GmbH (“Inspired”). <br />
             These Terms of Service (“ToS”) govern your use of ThreatShield, available at
-            <a href="https://threatshield.eu" class="text-primary-300 font-semibold">https://threatshield.eu</a>.
+            <a href="https://threatshield.eu" class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">https://threatshield.eu</a>.
         </p>
 
-        <h2>Service Description</h2>
-
+        <h2 class="mt-10">Service Description</h2>
         <p>
             ThreatShield is an open-source software-as-a-service (SaaS) application designed for ThreatModelling and
             ThreatManagement.
-            The service is hosted in Germany and primarily serving the EU market.
-        </p>
-        <p>
+            The service is hosted in Germany and primarily serving the EU market. <br>
             ThreatShield is currently in beta and not yet ready for production use.
         </p>
 
-        <h2>Acceptance of Terms</h2>
-
+        <h2 class="mt-10">Acceptance of Terms</h2>
         <p>
             By accessing or using ThreatShield, you agree to be bound by these ToS. If you do not agree to these terms,
             do
             not use ThreatShield.
         </p>
 
-        <h2>Usage Policy</h2>
+        <h2 class="mt-10">Usage Policy</h2>
         <p>
             The service is currently provided free of charge and is intended for IT professionals.
-            Users are responsible for the risks associated with the use of the service.</p>
+            Users are responsible for the risks associated with the use of the service.
+        </p>
 
-        <h2>Intellectual Property Rights</h2>
+        <h2 class="mt-10">Intellectual Property Rights</h2>
         <p>
             While the software behind ThreatShield is open source, specific terms and conditions may apply as stipulated
             in
@@ -74,48 +70,48 @@
             software's license agreement.
         </p>
 
-        <h2>User Conduct</h2>
+        <h2 class="mt-10">User Conduct</h2>
         <p>
             Users must not misuse the service in any way that is illegal, harmful, or against the interests of Inspired
             or
             other users.
         </p>
 
-        <h2>Modification of Service and Terms</h2>
-
+        <h2 class="mt-10">Modification of Service and Terms</h2>
         <p>
             Inspired reserves the right to modify or discontinue the service at any time.
             The ToS may be updated periodically, and continued use of the service constitutes acceptance of these
             changes.
         </p>
-        <h2>Privacy Policy</h2>
-
+       
+        <h2 class="mt-10">Privacy Policy</h2>
         <p>
             Please refer to our Privacy Policy for information on how we collect, use, and disclose information from our
             users.
         </p>
-        <h2>Limitation of Liability</h2>
+       
+        <h2 class="mt-10">Limitation of Liability</h2>
         <p>
             Inspired shall not be liable for any direct, indirect, incidental, special, or consequential damages
             resulting
             from the use or inability to use the service.
         </p>
 
-        <h2>Premium Accounts</h2>
+        <h2 class="mt-10">Premium Accounts</h2>
         <p>
             Inspired may introduce paid premium accounts in the future with additional features and capabilities.
         </p>
 
-        <h2>Governing Law</h2>
+        <h2 class="mt-10">Governing Law</h2>
         <p>These ToS are governed by the laws of Germany and the regulations of the European Union.</p>
 
-        <h2>Contact Information</h2>
+        <h2 class="mt-10">Contact Information</h2>
         <p>
             For any questions or concerns regarding these ToS, please contact us at
             <a href="mailto:threatshield@inspired.consulting"
-                class="text-primary-300 font-semibold">threatshield@inspired.consulting</a>.
+                class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">threatshield@inspired.consulting</a>.
             <br />
-            See <a href="/imprint.html" class="text-primary-300 font-semibold">our imprint</a> for more contact
+            See <a href="/imprint.html" class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">our imprint</a> for more contact
             information.
         </p>
 
