--- a/src/imprint.html
+++ b/src/imprint.html
@@ -12,8 +12,8 @@
     {{> doc_head}}
 </head>
 
-<body class="bg-primary-200 h-screen">
-    <div class="container mx-auto text-left py-12 max-w-4xl">
+<body class="flex flex-col bg-gray-200 min-h-screen">
+    <div class="container mx-auto text-left py-12 px-4 max-w-4xl flex-grow">
         <div class="flex justify-between items-center">
             <h1 class="my-4 text-3xl font-bold text-primary-900">
                 Imprint
@@ -22,43 +22,43 @@
         </div>
         <label class="text-gray-700">Responsible for content of this site:</label>
         <p class="my-3">
-            Inspired Consulting GmbH<br />
-            Konrad-Adenauer-Ufer 7 · 50668 Köln <br />
+            Inspired Consulting GmbH<br>
+            Konrad-Adenauer-Ufer 7 · 50668 Köln <br>
             Handelsregister: HRB 99932<br />
-            Registergericht: Amtsgericht Köln<br />
+            Registergericht: Amtsgericht Köln<br>
             VAT: DE327219324
         </p>
-        <p>
-            <label class="text-gray-700">Represented by the managing directors:</label><br />
-            Christian Albrecht, Oliver Tigges<br />
+        <p class="mt-6">
+            <label class="text-gray-700">Represented by the managing directors:</label><br>
+            Christian Albrecht, Oliver Tigges<br>
         </p>
-        <p class="mt-3">
-            <label class="text-gray-700">Contact:</label><br />
-            Phone: +49 221 27321334<br />
+        <p class="mt-6">
+            <label class="text-gray-700">Contact:</label><br>
+            Phone: +49 221 27321334<br>
             E-Mail:get@inspired.consulting
         </p>
 
         <p class="my-6">
             ThreatShield has been developed in the
-            <a href="https://inspired.consulting/digitale-manufaktur"><span class="text-inspired-gray font-semibold">
+            <a href="https://inspired.consulting/digitale-manufaktur"><span class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">
                     Digital Manufactory</span></a>
             of
-            <a href="https://inspired.consulting"><span class="text-inspired-gray  font-semibold">Inspired
+            <a href="https://inspired.consulting"><span class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline-offset-4">Inspired
                     Consulting</span></a>.
         </p>
-        <section class="my-6 text-sm text-primary-900">
-            <label class="text-gray-700">Image references:</label><br />
+        <section class="my-6 text-primary-600">
+            <label class="text-gray-700">Image references:</label><br>
             <ul>
                 <li><a href="https://www.flaticon.com/de/kostenlose-animierte-icons/roboter"
-                        title="Animated roboter icon" class="hover:text-primary-700 hover:underline underline-offset-4">Animated roboter icon by
+                        title="Animated roboter icon" class="hover:text-primary-500 active:text-primary-600 underline underline-offset-4">Animated roboter icon by
                         Freepik -
                         Flaticon</a></li>
                 <li><a href="https://www.flaticon.com/de/kostenloses-animiertes-icon/zusammenarbeit_9822027?term=menschen&page=1&position=8&origin=tag&related_id=9822027"
-                        title="Animated people icon" class="hover:text-primary-700 hover:underline underline-offset-4">Animated people icon by Freepik
+                        title="Animated people icon" class="hover:text-primary-500 active:text-primary-600 underline underline-offset-4">Animated people icon by Freepik
                         -
                         Flaticon</a></li>
                 <li><a href="https://www.flaticon.com/de/kostenlose-animierte-icons/sicherheit"
-                        title="Animated shield icons" class="hover:text-primary-700 hover:underline underline-offset-4">Animated shield icon by Freepik
+                        title="Animated shield icons" class="hover:text-primary-500 active:text-primary-600 underline underline-offset-4">Animated shield icon by Freepik
                         -
                         Flaticon</a></li>
             </ul>
