--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
 <!-- TOP NAVIGATION -->
 
 <!-- MOBILE NAVIGATION -->
-<nav id="mobileNav" class="text-gray-100 py-3 px-4 sticky top-0 z-50 flex flex-row lg:hidden"
+<nav id="mobileNav" class="text-gray-100 text-xl py-3 px-4 sticky top-0 z-50 flex flex-row lg:hidden"
     style="background-image: linear-gradient(90deg, rgba(102,69,232,1.00) 8%, rgba(126,73,244,1.00) 53%, rgba(149,74,244,1.00) 89%); background-position: center center; background-size: cover;">
 
     <!-- Threatshield logo -->
@@ -54,6 +54,7 @@
         <a href="#offers" class="block text-gray-100">Offering</a>
     </div>
 </nav>
+
 
 <!-- LARGE SCREEN NAVIGATION -->
 
