Aligned spacing for consistency in card sections

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -13,20 +13,7 @@
 </head>
 
 <body class="flex flex-col bg-gray-200 min-h-screen">
-    <style>
-        h2 {
-            margin-top: 1.5rem;
-            font-weight: 700;
-            font-size: 14pt;
-        }
-
-        p {
-            margin-top: 1rem;
-        }
-    </style>
-
     
-
     <div class="container mx-auto text-left py-12 px-4 max-w-4xl flex-grow">
         <div class="flex justify-between items-center">
             <h1 class="my-4 text-3xl font-bold">
@@ -37,45 +24,45 @@
 
         <p class="text-gray-700">Last Updated: January 10th, 2024</p>
 
-        <h2>Introduction</h2>
-        <p>Welcome to ThreatShield by Inspired Consulting GmbH (“Inspired”). We prioritize your privacy and handle your
+        <h2 class="mt-10 font-bold text-xl">Introduction</h2>
+        <p class="mt-2">Welcome to ThreatShield by Inspired Consulting GmbH (“Inspired”). We prioritize your privacy and handle your
             data transparently and responsibly. This policy outlines our practices regarding the collection, use, and
             sharing of your personal data in compliance with the General Data Protection Regulation (GDPR).</p>
 
-        <h2 class="mt-10">Hosting and Data Processing Location</h2>
-        <p>ThreatShield is hosted on the Google Cloud Platform (GCP) with servers located in Frankfurt, Germany. We
+        <h2 class="mt-10 font-bold text-xl">Hosting and Data Processing Location</h2>
+        <p class="mt-2">ThreatShield is hosted on the Google Cloud Platform (GCP) with servers located in Frankfurt, Germany. We
             strive to keep all collected data within Frankfurt to ensure high data protection standards.</p>
 
-        <h2 class="mt-10">Information Collection</h2>
-        <p>We collect information that you provide directly (e.g., during account creation) and information generated
+        <h2 class="mt-10 font-bold text-xl">Information Collection</h2>
+        <p class="mt-2">We collect information that you provide directly (e.g., during account creation) and information generated
             during your use of our services, like usage data. We may also obtain data from third-party sources as
             needed.</p>
 
-        <h2 class="mt-10">Use of Information</h2>
-        <p>Your information is used to provide, maintain, and improve our services. We also use the data to communicate
+        <h2 class="mt-10 font-bold text-xl">Use of Information</h2>
+        <p class="mt-2">Your information is used to provide, maintain, and improve our services. We also use the data to communicate
             with you and comply with our legal obligations. We do not sell personal data to third parties.</p>
 
-        <h2 class="mt-10">User Rights under GDPR</h2>
-        <p>You have the right to access, correct, delete, or limit processing of your personal data as stipulated by
+        <h2 class="mt-10 font-bold text-xl">User Rights under GDPR</h2>
+        <p class="mt-2">You have the right to access, correct, delete, or limit processing of your personal data as stipulated by
             GDPR. Contact us to exercise these rights.</p>
 
-        <h2 class="mt-10">Data Security Measures</h2>
-        <p>We implement suitable technical and organizational security measures to protect your data, in line with GDPR
+        <h2 class="mt-10 font-bold text-xl">Data Security Measures</h2>
+        <p class="mt-2">We implement suitable technical and organizational security measures to protect your data, in line with GDPR
             requirements.</p>
 
-        <h2 class="mt-10">Cookies</h2>
-        <p>We only use cookies, when it is technically necessary, e.g. for authentication for registred users.</p>
+        <h2 class="mt-10 font-bold text-xl">Cookies</h2>
+        <p class="mt-2">We only use cookies, when it is technically necessary, e.g. for authentication for registred users.</p>
 
-        <h2 class="mt-10">International Data Transfers</h2>
-        <p>Your information is processed within the EEA, specifically in Frankfurt, Germany. This ensures that your data
+        <h2 class="mt-10 font-bold text-xl">International Data Transfers</h2>
+        <p class="mt-2">Your information is processed within the EEA, specifically in Frankfurt, Germany. This ensures that your data
             is under the protection of GDPR.</p>
 
-        <h2 class="mt-10">Policy Amendments</h2>
-        <p>We may update this policy periodically. Any changes will be posted on our website, hosted on GitHub Pages.
+        <h2 class="mt-10 font-bold text-xl">Policy Amendments</h2>
+        <p class="mt-2">We may update this policy periodically. Any changes will be posted on our website, hosted on GitHub Pages.
         </p>
 
-        <h2 class="mt-10">Contact Information</h2>
-        <p>For queries regarding this privacy policy, please reach out to us at
+        <h2 class="mt-10 font-bold text-xl">Contact Information</h2>
+        <p class="mt-2">For queries regarding this privacy policy, please reach out to us at
             <a href="mailto:threatshield@inspired.consulting"
                 class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">threatshield@inspired.consulting</a>.
             <br />
