--- a/src/terms.html
+++ b/src/terms.html
@@ -11,18 +11,7 @@
     <link rel="stylesheet" href="./css/main.css" />
 </head>
 
-<body class="flex flex-col bg-gray-200 min-h-screen">
-    <style>
-        h2 {
-            margin-top: 1.5rem;
-            font-weight: 700;
-            font-size: 14pt;
-        }
-
-        p {
-            margin-top: 1rem;
-        }
-    </style>
+<body class="flex flex-col bg-gray-200 min-h-screen mt-6">
 
     <div class="container mx-auto text-left py-12 px-4 max-w-4xl flex-grow">
         <div class="flex justify-between items-center">
@@ -34,79 +23,79 @@
 
         <p class="text-gray-700">Last Updated: January 9th, 2024</p>
 
-        <h2>Introduction</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">Introduction</h2>
+        <p class="mt-2">
             Welcome to ThreatShield, a service provided by Inspired Consulting GmbH (“Inspired”). <br />
             These Terms of Service (“ToS”) govern your use of ThreatShield, available at
             <a href="https://threatshield.eu" class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">https://threatshield.eu</a>.
         </p>
 
-        <h2 class="mt-10">Service Description</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">Service Description</h2>
+        <p class="mt-2">
             ThreatShield is an open-source software-as-a-service (SaaS) application designed for ThreatModelling and
             ThreatManagement.
             The service is hosted in Germany and primarily serving the EU market. <br>
             ThreatShield is currently in beta and not yet ready for production use.
         </p>
 
-        <h2 class="mt-10">Acceptance of Terms</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">Acceptance of Terms</h2>
+        <p class="mt-2">
             By accessing or using ThreatShield, you agree to be bound by these ToS. If you do not agree to these terms,
             do
             not use ThreatShield.
         </p>
 
-        <h2 class="mt-10">Usage Policy</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">Usage Policy</h2>
+        <p class="mt-2">
             The service is currently provided free of charge and is intended for IT professionals.
             Users are responsible for the risks associated with the use of the service.
         </p>
 
-        <h2 class="mt-10">Intellectual Property Rights</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">Intellectual Property Rights</h2>
+        <p class="mt-2">
             While the software behind ThreatShield is open source, specific terms and conditions may apply as stipulated
             in
             the
             software's license agreement.
         </p>
 
-        <h2 class="mt-10">User Conduct</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">User Conduct</h2>
+        <p class="mt-2">
             Users must not misuse the service in any way that is illegal, harmful, or against the interests of Inspired
             or
             other users.
         </p>
 
-        <h2 class="mt-10">Modification of Service and Terms</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">Modification of Service and Terms</h2>
+        <p class="mt-2">
             Inspired reserves the right to modify or discontinue the service at any time.
             The ToS may be updated periodically, and continued use of the service constitutes acceptance of these
             changes.
         </p>
        
-        <h2 class="mt-10">Privacy Policy</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">Privacy Policy</h2>
+        <p class="mt-2">
             Please refer to our Privacy Policy for information on how we collect, use, and disclose information from our
             users.
         </p>
        
-        <h2 class="mt-10">Limitation of Liability</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">Limitation of Liability</h2>
+        <p class="mt-2">
             Inspired shall not be liable for any direct, indirect, incidental, special, or consequential damages
             resulting
             from the use or inability to use the service.
         </p>
 
-        <h2 class="mt-10">Premium Accounts</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">Premium Accounts</h2>
+        <p class="mt-2">
             Inspired may introduce paid premium accounts in the future with additional features and capabilities.
         </p>
 
-        <h2 class="mt-10">Governing Law</h2>
-        <p>These ToS are governed by the laws of Germany and the regulations of the European Union.</p>
+        <h2 class="mt-10 font-bold text-xl">Governing Law</h2>
+        <p class="mt-2">These ToS are governed by the laws of Germany and the regulations of the European Union.</p>
 
-        <h2 class="mt-10">Contact Information</h2>
-        <p>
+        <h2 class="mt-10 font-bold text-xl">Contact Information</h2>
+        <p class="mt-2">
             For any questions or concerns regarding these ToS, please contact us at
             <a href="mailto:threatshield@inspired.consulting"
                 class="text-primary-600 hover:text-primary-500 active:text-primary-600 font-semibold underline underline underline-offset-4">threatshield@inspired.consulting</a>.
