--- a/src/index.html
+++ b/src/index.html
@@ -242,7 +242,7 @@
                                 d="M26.6374 14.5455V32H22.9471V18.0483H22.8448L18.8477 20.554V17.2812L23.1687 14.5455H26.6374Z"
                                 fill="#F8F6FB" />
                         </svg>
-                        <h3 class="font-bold text-xl my-6 text-primary-900 text-center">
+                        <h3 class="font-bold text-xl mt-6 mb-2 text-primary-900 text-center">
                             Initial Consultation
                         </h3>
                         <p class="text-center text-gray-700 text-lg">
@@ -263,14 +263,14 @@
                                 d="M17.3562 32V29.3409L23.5692 23.5881C24.0977 23.0767 24.5408 22.6165 24.8988 22.2074C25.2624 21.7983 25.538 21.3977 25.7255 21.0057C25.913 20.608 26.0067 20.179 26.0067 19.7188C26.0067 19.2074 25.8903 18.767 25.6573 18.3977C25.4244 18.0227 25.1062 17.7358 24.7028 17.5369C24.2994 17.3324 23.842 17.2301 23.3306 17.2301C22.7965 17.2301 22.3306 17.3381 21.9329 17.554C21.5352 17.7699 21.2283 18.0795 21.0124 18.483C20.7965 18.8864 20.6886 19.3665 20.6886 19.9233H17.1857C17.1857 18.7812 17.4442 17.7898 17.9613 16.9489C18.4783 16.108 19.2028 15.4574 20.1346 14.9972C21.0664 14.5369 22.1403 14.3068 23.3562 14.3068C24.6062 14.3068 25.6942 14.5284 26.6204 14.9716C27.5522 15.4091 28.2766 16.017 28.7937 16.7955C29.3107 17.5739 29.5692 18.4659 29.5692 19.4716C29.5692 20.1307 29.4386 20.7812 29.1772 21.4233C28.9215 22.0653 28.4641 22.7784 27.805 23.5625C27.146 24.3409 26.217 25.2756 25.0181 26.3665L22.4698 28.8636V28.983H29.7994V32H17.3562Z"
                                 fill="#F8F6FB" />
                         </svg>
-                        <h3 class="font-bold text-xl my-6 text-primary-900 text-center">
+                        <h3 class="font-bold text-xl mt-6 mb-2 text-primary-900 text-center">
                             Interactive Workshop
                         </h3>
                         <p class="text-center text-gray-700 text-lg">
                             Participate in a 2-hour hands-on workshop using your system as a case study to create an
                             initial threat model and learn how to effectively use ThreatShield.</p>
                     </div>
-                    <div class="border px-4 py-2 mt-6 rounded-md border-primary-400 my-2 text-primary-600 text-center">
+                    <div class="border px-4 py-2 mt-6 mb-2 rounded-md border-primary-400 my-2 text-primary-600 text-center">
                         <span class="text-xs font-semibold">Be quick:</span><br>
                         Free of charge for first requests
                     </div>
@@ -289,7 +289,7 @@
                                 d="M23.4563 32.2386C22.1836 32.2386 21.0501 32.0199 20.0558 31.5824C19.0671 31.1392 18.2859 30.5312 17.712 29.7585C17.1438 28.9801 16.8512 28.0824 16.8342 27.0653H20.5501C20.5728 27.4915 20.712 27.8665 20.9677 28.1903C21.229 28.5085 21.5756 28.7557 22.0075 28.9318C22.4393 29.108 22.9251 29.196 23.4648 29.196C24.0273 29.196 24.5245 29.0966 24.9563 28.8977C25.3881 28.6989 25.7262 28.4233 25.9705 28.071C26.2148 27.7187 26.337 27.3125 26.337 26.8523C26.337 26.3864 26.2063 25.9744 25.945 25.6165C25.6893 25.2528 25.32 24.9687 24.837 24.7642C24.3597 24.5597 23.7915 24.4574 23.1325 24.4574H21.5046V21.7472H23.1325C23.6893 21.7472 24.1808 21.6506 24.6069 21.4574C25.0387 21.2642 25.3739 20.9972 25.6126 20.6562C25.8512 20.3097 25.9705 19.9062 25.9705 19.446C25.9705 19.0085 25.8654 18.625 25.6552 18.2955C25.4506 17.9602 25.1609 17.6989 24.7859 17.5114C24.4165 17.3239 23.9847 17.2301 23.4904 17.2301C22.9904 17.2301 22.533 17.321 22.1183 17.5028C21.7035 17.679 21.3711 17.9318 21.1211 18.2614C20.8711 18.5909 20.7376 18.9773 20.7205 19.4205H17.1836C17.2006 18.4148 17.4876 17.5284 18.0444 16.7614C18.6012 15.9943 19.3512 15.3949 20.2944 14.9631C21.2433 14.5256 22.3143 14.3068 23.5075 14.3068C24.712 14.3068 25.766 14.5256 26.6694 14.9631C27.5728 15.4006 28.2745 15.9915 28.7745 16.7358C29.2802 17.4744 29.5302 18.304 29.5245 19.2244C29.5302 20.2017 29.2262 21.017 28.6126 21.6705C28.0046 22.3239 27.212 22.7386 26.2347 22.9148V23.0511C27.5188 23.2159 28.4961 23.6619 29.1665 24.3892C29.8427 25.1108 30.1779 26.0142 30.1722 27.0994C30.1779 28.0938 29.891 28.9773 29.3114 29.75C28.7376 30.5227 27.945 31.1307 26.9336 31.5739C25.9222 32.017 24.7631 32.2386 23.4563 32.2386Z"
                                 fill="#F8F6FB" />
                         </svg>
-                        <h3 class="font-bold text-xl my-6 text-primary-900 text-center">
+                        <h3 class="font-bold text-xl mt-6 mb-2 text-primary-900 text-center">
                             Run ThreatShield yourself
                         </h3>
                         <p class="text-center text-gray-700 text-lg">
@@ -458,6 +458,29 @@
             </div>
         </div>
     </section>
+
+    <!-- CONTACT US -->
+   
+    <section class="bg-gray-100 pt-12 pb-16">
+        <div class="container mx-auto">
+            <div class="px-4 lg:pr-10 text-center">
+                <h3 class="text-primary-900 mb-4 uppercase">Ready to protect your business?</h3>
+                <hr class="border-t-2 border-secondary-400 mx-auto w-80 my-4">
+                <h2 class="text-4xl mb-8 font-bold text-primary-900 py-2">
+                    Any questions?<br>
+                    We would love to hear from you
+                </h2>
+                <a href="mailto:threatshield@inspired.consulting"
+                    class="block md:inline-block bg-primary-500 text-white tracking-wider py-4 px-6 rounded hover:bg-primary-700 active:bg-primary-500 transition-all">
+                    Send us an e-mail
+                </a>
+            </div>
+            <div class="flex justify-center">
+                <img src="img/chatbot.gif" alt="Animated Icon" class="w-40 h-40 my-4">
+            </div>
+        </div>
+    </section>
+    
 </main>
 
 <div>
