Fine-tuning the styling of the document site

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -12,15 +12,15 @@
     {{> doc_head}}
 </head>
 
-<body class="flex flex-col bg-gray-200 min-h-screen">
+<body class="flex flex-col min-h-screen">
     
     <div class="container mx-auto text-left py-12 px-4 max-w-4xl flex-grow">
         <div class="flex justify-between items-center">
-            <h1 class="my-4 text-3xl font-bold">
+            <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
                 Privacy Policy for ThreatShield
             </h1>
             <a class="btn btn-primary rounded" href="/">Back</a>
-        </div>
+        </div><br>
 
         <p class="text-gray-700">Last Updated: January 10th, 2024</p>
 
