--- a/src/imprint.html
+++ b/src/imprint.html
@@ -12,14 +12,14 @@
     {{> doc_head}}
 </head>
 
-<body class="flex flex-col bg-gray-200 min-h-screen">
+<body class="flex flex-col min-h-screen">
     <div class="container mx-auto text-left py-12 px-4 max-w-4xl flex-grow">
         <div class="flex justify-between items-center">
-            <h1 class="my-4 text-3xl font-bold text-primary-900">
+            <h1 class="mt-2 text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">
                 Imprint
             </h1>
             <a class="btn btn-primary rounded" href="/">Back</a>
-        </div>
+        </div><br>
         <label class="text-gray-700">Responsible for content of this site:</label>
         <p class="my-3">
             Inspired Consulting GmbH<br>
