changed documentation titel

--- a/src/documentation.html
+++ b/src/documentation.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ThreatShield - Knowledge" />
     <link rel="stylesheet" href="./css/main.css" />
-    <title>Document - ThreatShield</title>
+    <title>Documentation - ThreatShield</title>
 </head>
 
 <body class="flex flex-col min-h-screen mt-6">
